[metadata]
name=CxAdmin
version=1.0.52.2
author=Felix Weber
author_email=felix@iron59.co.uk
description=Python SDK for interacting with the CxEngage API
long_description=file: readme.md
long_description_content_type=text/markdown
readme=file: readme.md
url=https://github.com/ntflix/cxadmin
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
    requests

[options.package_data]
CxAdmin = typings/CxAdmin/*.pyi

[options.packages.find]
where = src
